# log-mcp-rs

./: Cargo.toml  Dockerfile  README.md  config.example.yaml  debug_mcp.py  debug_request.json  debug_request_oneline.json  debug_request_with_time.json  debug_search_failure.json  debug_tool_call.json  debug_tool_call_no_root.json  debug_tool_call_string_args.json  debug_tool_call_with_time.json  docker-compose.yml  log-search.service  mcp_config.yaml  prepare_chunks.py  test_mcp_agent_scenario.py  test_request.json
doc/specs/log-mcp-rs/: api-contract.md  design.md  requirements.md  tasks.md
src/: config.rs  error.rs  file_manager.rs  http.rs  lib.rs  main.rs  mcp.rs  model.rs  parser.rs  query.rs  reader.rs  scanner.rs  search.rs  session_store.rs
tests/: test_file_manager.rs  test_session_store.rs
