[package]
name = "log-search-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
futures = "0.3"
globset = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
flate2 = { version = "1", features = ["tokio"] }
encoding_rs = "0.8"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
async-stream = "0.3"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
chardetng = "0.1"
urlencoding = "2"
tower = "0.5"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
